--- a/java/build.gradle
+++ b/java/build.gradle
@@ -30,5 +30,7 @@ dependencies {
     implementation 'com.google.guava:guava:28.2-jre'
 
     // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
+    // testImplementation 'junit:junit:4.12'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2' 
 }
