--- a/java/build.gradle
+++ b/java/build.gradle
@@ -32,5 +32,9 @@ dependencies {
     // Use JUnit test framework
     // testImplementation 'junit:junit:4.12'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2' 
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'
+
+    test {
+        useJUnitPlatform()
+    }
 }
